--- a/OfficeUpdates/index.yml
+++ b/OfficeUpdates/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: TimDavenport
   ms.author: andrewmo
   ms.date: 06/18/2020
-  ms.openlocfilehash: 8d6eb89310b8a5ab94b530928f069caadcea6818
-  ms.sourcegitcommit: 1404eb977e0bc5d5de5a89c713eae9f32fdc877f
+  ms.openlocfilehash: eaf433d25fee013316e143f3c1beef45c2ace997
+  ms.sourcegitcommit: 04f3aa30703f4f1cf89721853a7c052fcca2b97f
   ms.translationtype: HT
   ms.contentlocale: ko-KR
-  ms.lasthandoff: 01/07/2021
-  ms.locfileid: "49780746"
+  ms.lasthandoff: 03/24/2021
+  ms.locfileid: "51170227"
 landingContent:
 - title: Microsoft 365 앱
   linkLists:
@@ -48,13 +48,13 @@ landingContent:
   - linkListType: overview
     links:
     - text: Exchange Server 업데이트
-      url: https://docs.microsoft.com/Exchange/new-features/build-numbers-and-release-dates
+      url: /Exchange/new-features/build-numbers-and-release-dates
     - text: Project Server 업데이트
       url: project-server-updates.md
     - text: SharePoint Server 업데이트
       url: sharepoint-updates.md
     - text: 비즈니스용 Skype 서버 업데이트
-      url: https://docs.microsoft.com/SkypeForBusiness/sfb-server-updates
+      url: /SkypeForBusiness/sfb-server-updates
 - title: Office(영구 라이선스)
   linkLists:
   - linkListType: overview
@@ -84,7 +84,7 @@ landingContent:
   - linkListType: overview
     links:
     - text: Windows 10 릴리스 정보
-      url: https://aka.ms/windows/releaseinfo
+      url: /windows/release-health/release-information
     - text: Microsoft 수명 주기 정책
       url: https://support.microsoft.com/lifecycle
     - text: Microsoft Security 업데이트 가이드
